# PiccoloRust

./: Cargo.toml  README.md
engine/: framework.rs
engine/ch02/: common.rs  first_triangle.rs
engine/ch03/: first_pipeline.rs  shader.wgsl
engine/common/: camera.rs  colormap.rs  common_run.rs  math_func.rs  surface_data.rs  texture_data.rs  transforms.rs  vertex_data.rs
engine/shader/: first_triangle.wgsl
src/: main.rs
